added new perf lab with some scenarios